# ATCBot

./: hex_map.py  main.py  production_info.json  pyproject.toml  resource_info.json  testrunner.py  utils.py
dbfiles/ATC Test Server/general/: game.db
